@@ -15,6 +15,10 @@ import com.wooteco.sokdak.board.repository.BoardRepository;
 import com.wooteco.sokdak.board.repository.PostBoardRepository;
 import com.wooteco.sokdak.comment.dto.NewCommentRequest;
 import com.wooteco.sokdak.comment.service.CommentService;
+import com.wooteco.sokdak.hashtag.domain.Hashtag;
+import com.wooteco.sokdak.hashtag.domain.PostHashtag;
+import com.wooteco.sokdak.hashtag.repository.HashtagRepository;
+import com.wooteco.sokdak.hashtag.repository.PostHashtagRepository;
 import com.wooteco.sokdak.post.domain.Post;
 import com.wooteco.sokdak.post.dto.MyPostsResponse;
 import com.wooteco.sokdak.post.dto.NewPostRequest;
@@ -53,8 +57,15 @@ class PostServiceTest extends ServiceTest {
     @Autowired
     private CommentService commentService;
 
+    @Autowired
+    private HashtagRepository hashtagRepository;
+
+    @Autowired
+    private PostHashtagRepository postHashtagRepository;
+
     private Post post;
     private Board board;
+    private Board hotBoard;
     private PostBoard postBoard;
 
     @BeforeEach
@@ -69,15 +80,23 @@ class PostServiceTest extends ServiceTest {
                 .build();
         board = boardRepository.findById(2L)
                 .orElseThrow(BoardNotFoundException::new);
+        hotBoard = boardRepository.findById(1L)
+                .orElseThrow(BoardNotFoundException::new);
     }
 
     @DisplayName("특정 게시판에 익명으로 글 작성 기능")
     @Test
     void addPost_Anonymous() {
-        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", true, Collections.emptyList());
+        String tagName = "tag";
+        Hashtag tag = Hashtag.builder()
+                .name(tagName)
+                .build();
+        NewPostRequest newPostRequest = new NewPostRequest("제목", "본문", true, List.of(tagName));
 
         Long postId = postService.addPost(FREE_BOARD_ID, newPostRequest, AUTH_INFO);
         Post actual = postRepository.findById(postId).orElseThrow();
+        List<PostHashtag> postHashtags = postHashtagRepository.findAllByPost(actual);
+        List<Hashtag> hashtags = hashtagRepository.findAllByNameContains(tagName);
 
         assertAll(
                 () -> assertThat(actual.getTitle()).isEqualTo(newPostRequest.getTitle()),
@@ -85,7 +104,9 @@ class PostServiceTest extends ServiceTest {
                 () -> assertThat(actual.getMember().getId()).isEqualTo(member.getId()),
                 () -> assertThat(actual.getNickname()).isNotEqualTo(actual.getMember().getNickname()),
                 () -> assertThat(actual.getCreatedAt()).isNotNull(),
-                () -> assertThat(actual.getPostBoards().get(0).getBoard().getTitle()).isNotNull()
+                () -> assertThat(actual.getWritableBoard().getId()).isEqualTo(FREE_BOARD_ID),
+                () -> assertThat(postHashtags).hasSize(1),
+                () -> assertThat(hashtags).contains(tag)
         );
     }
 
@@ -112,9 +133,9 @@ class PostServiceTest extends ServiceTest {
     void findPost_Session_MyPost() {
         Long savedPostId = postRepository.save(post).getId();
         postBoard = PostBoard.builder()
-                .post(post)
-                .board(board)
                 .build();
+        postBoard.addPost(post);
+        postBoard.addBoard(board);
         postBoardRepository.save(postBoard);
 
         PostDetailResponse response = postService.findPost(savedPostId, AUTH_INFO);
@@ -133,10 +154,9 @@ class PostServiceTest extends ServiceTest {
     @Test
     void findPost_Session_OtherPost() {
         Long savedPostId = postRepository.save(post).getId();
-        postBoard = PostBoard.builder()
-                .post(post)
-                .board(board)
-                .build();
+        postBoard = PostBoard.builder().build();
+        postBoard.addPost(post);
+        postBoard.addBoard(board);
         postBoardRepository.save(postBoard);
 
         PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(2L, USER.getName(), "nickname"));
@@ -156,10 +176,37 @@ class PostServiceTest extends ServiceTest {
     void findPost_NoSession() {
         Long savedPostId = postRepository.save(post).getId();
         postBoard = PostBoard.builder()
-                .post(post)
-                .board(board)
                 .build();
+        postBoard.addPost(post);
+        postBoard.addBoard(board);
         postBoardRepository.save(postBoard);
+
+        PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(null, USER.getName(), "nickname"));
+
+        assertAll(
+                () -> assertThat(response.getTitle()).isEqualTo(post.getTitle()),
+                () -> assertThat(response.getContent()).isEqualTo(post.getContent()),
+                () -> assertThat(response.isAuthorized()).isFalse(),
+                () -> assertThat(response.isModified()).isFalse(),
+                () -> assertThat(response.getCreatedAt()).isNotNull(),
+                () -> assertThat(response.getBoardId()).isEqualTo(postBoard.getBoard().getId())
+        );
+    }
+
+    @DisplayName("로그인 없이,게시글 조회 기능")
+    @Test
+    void findPost_No_Hot_Board() {
+        Long savedPostId = postRepository.save(post).getId();
+        postBoard = PostBoard.builder()
+                .build();
+        postBoard.addPost(post);
+        postBoard.addBoard(board);
+        PostBoard postHotBoard = PostBoard.builder()
+                .build();
+        postHotBoard.addBoard(hotBoard);
+        postHotBoard.addPost(post);
+        postBoardRepository.save(postBoard);
+        postBoardRepository.save(postHotBoard);
 
         PostDetailResponse response = postService.findPost(savedPostId, new AuthInfo(null, USER.getName(), "nickname"));
 
@@ -184,7 +231,7 @@ class PostServiceTest extends ServiceTest {
 
     @DisplayName("특정 게시판 게시글 목록 조회 기능")
     @Test
-    void findPosts() {
+    void findPostsByBoard() {
         postService.addPost(board.getId(), new NewPostRequest("제목1", "본문1", false, new ArrayList<>()),
                 new AuthInfo(1L, USER.getName(), "nickname"));
         postService.addPost(board.getId(), new NewPostRequest("제목2", "본문2", false, new ArrayList<>()),
